--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -1,4 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 *{
-    font-family: 'Open+Sans', sans-serif;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
+}
+
+html, body {
+background-color: #ddd;
+}
+
+header{
+    background-color: blue;
+    color: floralwhite;
+
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content:  space-between;
+}
+a, a:hover{
+    text-decoration: none;
+    color: unset;
 }
