--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
 :root {
     --bg-gray: #ddd;
+    --text-gray: #4a4a4a;
     --color-primary: #4D41C0;
     --white: #fff;
 }
@@ -15,9 +16,9 @@ html, body {
 background-color: var(--bg-gray);
 }
 
-header{
+header {
     background-color: var(--color-primary);
-    color: var(--white);
+    color: var(--blue);
     height: 60px;
     display: flex;
     align-items: center;
@@ -36,11 +37,11 @@ nav h1 {
 
 }
 
-nav a{
+nav a {
     font-size: 12px;
     font-weight: 400;
 }
-a, a:hover{
+a, a:hover {
     text-decoration: none;
     color: unset;
 }
@@ -53,3 +54,44 @@ a, a:hover{
 
     }
 
+    #dsmovie-card-list {
+padding: 40px 0;
+    }
+    
+    .dsmovie-card {
+        width: 360px;
+        height: 400px;
+        background-color: var(--white);
+    }
+    .dsmovie-card img {
+        width: 100%;
+        height: 100%;
+        border-radius: 8px 8px 0 0;
+    }
+.dsmovie-card-description {
+    background-color: var(--white);
+    padding: 10px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+    
+}
+.dsmovie-card-description h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+.dsmovie-btn, .dsmovie-btn:hover {
+   width: 180px;
+   height: 40px;
+   background-color: var(--color-primary);
+   color: var(--white);
+   font-size: 14px;
+   font-weight: 700;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   justify-content: center;
+   border-radius: 4px;
+}
