--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -95,3 +95,8 @@ padding: 40px 0;
    justify-content: center;
    border-radius: 4px;
 }
+.DSMovie-form-container {
+    padding: 40px 0;
+    max-width: 480px;
+}
+    
