--- a/Css/Styles.css
+++ b/Css/Styles.css
@@ -4,6 +4,7 @@
     --text-gray: #4a4a4a;
     --color-primary: #4D41C0;
     --white: #fff;
+    --text-light-gray: #aaa;
 }
 *{
     box-sizing: border-box;
@@ -62,11 +63,13 @@ padding: 40px 0;
         width: 300px;
         height: 400px;
         background-color: var(--white);
+       
     }
     .dsmovie-card img {
         width: 100%;
         height: 100%;
         border-radius: 8px 8px 0 0;
+      
     }
 .dsmovie-card-description {
     background-color: var(--white);
@@ -75,6 +78,7 @@ padding: 40px 0;
     flex-direction: column;
     align-items: center;
     border-radius: 0 0 8px 8px;
+     
     
 }
 .dsmovie-card-description h3 {
@@ -94,9 +98,48 @@ padding: 40px 0;
    flex-direction: column;
    justify-content: center;
    border-radius: 4px;
+   border: 0;
 }
 .DSMovie-form-container {
     padding: 40px 0;
     max-width: 480px;
 }
-    
+
+.dsmovie-form-description  {
+    background-color: var(--white);
+    padding: 20px;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+
+}
+
+.dsmovie-form {
+    width: 100%;
+}
+.dsmovie-form-description h3 {
+    font-size: 13px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+    .dsmovie-form-group {
+        margin-bottom: 20px;
+    }
+    .dsmovie-form-group {
+        font-size: 12px;
+        color: var(--text-light-gray);
+
+    }
+
+    .dsmovie-form-group label {
+        font-size: 12px;
+        color: var(--text-light-gray);
+    }
+.dsmovie-form-btn-container {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
